// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Panel canvas performance fast path draws point markers at the symbol threshold 1`] = `
[
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"lineTo","props":{"x":152.960007,"y":124}},
{"type":"lineTo","props":{"x":276.480011,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}},{"type":"lineTo","props":{"x":152.960007,"y":124}},{"type":"lineTo","props":{"x":276.480011,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":240}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":152.960007,"f":124}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":276.480011,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"lineTo","props":{"x":152.960007,"y":124}},
{"type":"lineTo","props":{"x":276.480011,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}},{"type":"lineTo","props":{"x":152.960007,"y":124}},{"type":"lineTo","props":{"x":276.480011,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":240}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":152.960007,"f":124}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":276.480011,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}}
]
`;

exports[`Panel canvas performance fast path drops point markers one point past the symbol threshold 1`] = `
[
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"lineTo","props":{"x":152.960007,"y":162.666672}},
{"type":"lineTo","props":{"x":276.480011,"y":85.333336}},
{"type":"lineTo","props":{"x":400,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}},{"type":"lineTo","props":{"x":152.960007,"y":162.666672}},{"type":"lineTo","props":{"x":276.480011,"y":85.333336}},{"type":"lineTo","props":{"x":400,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"lineTo","props":{"x":152.960007,"y":162.666672}},
{"type":"lineTo","props":{"x":276.480011,"y":85.333336}},
{"type":"lineTo","props":{"x":400,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}},{"type":"lineTo","props":{"x":152.960007,"y":162.666672}},{"type":"lineTo","props":{"x":276.480011,"y":85.333336}},{"type":"lineTo","props":{"x":400,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"restore","props":{}}
]
`;

exports[`Panel canvas performance fast path drops point markers when the chart total crosses the threshold across several short series 1`] = `
[
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"lineTo","props":{"x":152.960007,"y":124}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}},{"type":"lineTo","props":{"x":152.960007,"y":124}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":124}},
{"type":"lineTo","props":{"x":152.960007,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":124}},{"type":"lineTo","props":{"x":152.960007,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"lineTo","props":{"x":152.960007,"y":124}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}},{"type":"lineTo","props":{"x":152.960007,"y":124}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":124}},
{"type":"lineTo","props":{"x":152.960007,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":124}},{"type":"lineTo","props":{"x":152.960007,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"restore","props":{}}
]
`;

exports[`Panel canvas performance fast path keeps point markers past the threshold when Show points is Always 1`] = `
[
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"lineTo","props":{"x":152.960007,"y":162.666672}},
{"type":"lineTo","props":{"x":276.480011,"y":85.333336}},
{"type":"lineTo","props":{"x":400,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}},{"type":"lineTo","props":{"x":152.960007,"y":162.666672}},{"type":"lineTo","props":{"x":276.480011,"y":85.333336}},{"type":"lineTo","props":{"x":400,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":240}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":152.960007,"f":162.666672}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":276.480011,"f":85.333336}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":400,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"lineTo","props":{"x":152.960007,"y":162.666672}},
{"type":"lineTo","props":{"x":276.480011,"y":85.333336}},
{"type":"lineTo","props":{"x":400,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}},{"type":"lineTo","props":{"x":152.960007,"y":162.666672}},{"type":"lineTo","props":{"x":276.480011,"y":85.333336}},{"type":"lineTo","props":{"x":400,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":240}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":152.960007,"f":162.666672}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":276.480011,"f":85.333336}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":400,"f":8}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}}
]
`;

exports[`Panel canvas performance fast path keeps point markers when several short series stay under the total 1`] = `
[
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":124}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":124}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":240}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":124}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":8}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":240}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":240}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":124}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":124}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"beginPath","props":{}},
{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}},
{"type":"clip","props":{"path":[{"type":"beginPath","props":{}},{"type":"rect","props":{"x":28,"y":7,"width":374,"height":234}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":2}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"bevel"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":29.440001,"y":8}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":29.440001,"y":8}}]}},
{"type":"restore","props":{}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":240}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ffffff"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":0.666667}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":124}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"setTransform","props":{"a":3,"b":0,"c":0,"d":3,"e":29.440001,"f":8}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}]}},
{"type":"restore","props":{}}
]
`;
